# OSM-Firefighter

./: .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile  config.json
backend/data/: bbgrund.fmi  bbgrund_undirected.ch.hub  bbgrund_undirected.fmi  stgcenter.fmi  stgcenter_undirected.ch.hub  stgcenter_undirected.fmi  tokio_undirected.fmi
backend/resources/: bbgrund.fmi  bbgrund_ch.fmi  bbgrund_ch_hubScore.distScore  bbgrund_ch_hubScore.edgeScore  leinfelden.fmi  leinfelden_ch.fmi  leinfelden_ch.hub  leinfelden_ch_hubScore.distScore  leinfelden_ch_hubScore.edgeScore  stgcenter_ch.fmi  stgcenter_ch.hub  tokio.ch.hub  tokio.fmi  tokio_scd_ch.fmi  toy.fmi
backend/src/: bench.rs  binary_minheap.rs  error.rs  firefighter.rs  graph.rs  lib.rs  main.rs  query.rs  session.rs  strategy.rs
backend/src/firefighter/: mod.rs  problem.rs  strategy.rs  view.rs
backend/src/web_utils/: error.rs  mod.rs  query.rs  session.rs
doc/: Benchmarks_stgcenter.xlsx  Benchmarks_tokio.xlsx  frontend-wireframe.drawio
frontend/: .gitignore  Dockerfile  README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
frontend/src/app/data/: GraphData.ts  SimulationConfig.ts  SimulationMetaData.ts  (+1 more)
frontend/src/environments/: environment.prod.ts  environment.ts
graph_tool/: .gitignore  Cargo.toml
graph_tool/src/: main.rs
graphs/: bbgrund.ch.hub
postman/: Firefighter.postman_collection.json  Firefighter.postman_environment.json
(+28 files in other folders)
