[package]
name = "osm_firefighter"
version = "0.1.0"
authors = ["Samuel Holderbach <st152101@stud.uni-stuttgart.de>",
            "Dominik Krenz",
            "Aimn Ahmed"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
