[package]
name = "osm_firefighter_backend"
version = "0.1.0"
authors = ["Samuel Holderbach <st152101@stud.uni-stuttgart.de>",
            "Dominik Krenz",
            "Aimn Ahmed"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-session = "0.5.0-beta.2"
serde = "1"
serde_json = "1"
