[package]
name = "osm_firefighter_backend"
version = "0.1.0"
authors = ["Samuel Holderbach <st152101@stud.uni-stuttgart.de>",
            "Dominik Krenz",
            "Aimn Ahmed"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
serde = "1"
serde_json = "1"
derive_more = "0.99.16"
env_logger = "0.9.0"
log = "0.4.14"
nanoid = "0.4.0"
transient-hashmap = "0.4.1"
rand = "0.8.4"
qstring = "0.7.2"
image = "0.23.14"
strum = "0.22"
strum_macros = "0.22"
geo = "0.18.0"
once_cell = "1.8.0"
